fixed image not showing up on page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -76,13 +76,4 @@ main {
 
 }
 
-#arancini1 {
-    font-family: Gupter, sans-serif;
-    background-image: url('assets/images/arancini.jpg');
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: 100% 100%;
-    color: white;
-}
-
 /*Footer*/
